--- a/about-me/index.html
+++ b/about-me/index.html
@@ -654,9 +654,9 @@ flexibility(document.documentElement);
 <div class="wp-block-uagb-container uagb-block-8c55967f alignfull uagb-is-root-container"><div class="uagb-container-inner-blocks-wrap">
 <div class="wp-block-uagb-info-box uagb-block-79b0b5a2 uagb-infobox__content-wrap  uagb-infobox-icon-above-title uagb-infobox-image-valign-top"><div class="uagb-ifb-content">
 <div class="uagb-ifb-title-wrap">
-<span class="uagb-ifb-title-prefix">my story</span><h2 class="uagb-ifb-title">Why I learn programming ?</h2>
+<span class="uagb-ifb-title-prefix">my story</span>
 </div>
-<p class="uagb-ifb-desc">I began programming in 8th grade with a simple motivation: to create cool games and apps like the ones I enjoyed on my mobile device. My curiosity about how these games and apps were created drove me to learn programming.</p>
+<p class="uagb-ifb-desc">Hi my name is Mukund Thorat, I am 18 y/o and passionate about humans and especially brain</p>
 </div></div>
 </div></div>
 
@@ -668,31 +668,9 @@ flexibility(document.documentElement);
 
 
 
-<div class="wp-block-uagb-container uagb-block-7a949840 alignfull uagb-is-root-container"><div class="uagb-container-inner-blocks-wrap">
-<div class="wp-block-uagb-advanced-heading uagb-block-6e058316">
-<h3 class="uagb-heading-text">Mastering the Art</h3>
-<p class="uagb-desc-text">I aspire to deepen my knowledge of Python and C++ in order to develop innovative software solutions that address people&#8217;s day-to-day challenges, ultimately making their lives easier.</p>
-</div>
-
-
-
-<div class="wp-block-uagb-advanced-heading uagb-block-0939849c">
-<h3 class="uagb-heading-text">Sketching Dreams</h3>
-<p class="uagb-desc-text">In addition to my hobby of programming, I have a passion for drawing. Before I delved into programming, I spent a lot of time honing my sketching skills. Drawing brings me immense joy, and I&#8217;ve participated in numerous competitions, winning prizes along the way.</p>
-</div>
-
-
-
-<div class="wp-block-uagb-advanced-heading uagb-block-b4ff13f4">
-<h3 class="uagb-heading-text">Building a Portfolio</h3>
-<p class="uagb-desc-text">With a collection of projects that reflected my dedication to programming and sketches that embodied my creative spirit, I set out to build a portfolio that showcases the fusion of logic and artistry.</p>
-</div>
-
-
-
 <div class="wp-block-uagb-advanced-heading uagb-block-38dda817">
-<h3 class="uagb-heading-text">My Goals</h3>
-<p class="uagb-desc-text">My aspiration is to contribute to solving global challenges, simplifying people&#8217;s lives through innovative services. I aim to pursue entrepreneurship as a career path, driven by a desire to make a meaningful impact on the world.</p>
+<h3 class="uagb-heading-text">My interests</h3>
+<p class="uagb-desc-text">I’m currently exploring how the human brain works, which has sparked my deep interest in neuroscience, biotechnology, artificial intelligence, robotics, and science. My curiosity drives me to understand the intersection between biology and technology, especially how we can replicate or enhance human intelligence through innovation.</p>
 </div>
 </div></div>
 
@@ -701,7 +679,7 @@ flexibility(document.documentElement);
 <div class="wp-block-uagb-container uagb-block-722807eb alignfull uagb-is-root-container"><div class="uagb-container-inner-blocks-wrap">
 <div class="wp-block-uagb-info-box uagb-block-0f56c2f1 uagb-infobox__content-wrap  uagb-infobox-icon-above-title uagb-infobox-image-valign-top"><div class="uagb-ifb-content">
 <div class="uagb-ifb-title-wrap"><h2 class="uagb-ifb-title">Join the Creation Journey</h2></div>
-<p class="uagb-ifb-desc">Start exploring the world of programming marvels and artistic creations with Mukund Thorat.</p>
+<p class="uagb-ifb-desc">Let's innovate together</p>
 <div class="uagb-ifb-button-wrapper wp-block-button"><a href="https://mukundthorat08.github.io/Portfolio/contact/" class="uagb-infobox-cta-link wp-block-button__link" target="_self" rel="noopener noreferrer" onclick="return true;" alt=""><span class="uagb-inline-editing">Discover More</span></a></div>
 </div></div>
 </div></div>
