--- a/index.html
+++ b/index.html
@@ -800,15 +800,11 @@ flexibility(document.documentElement);
 
 
 <div class="wp-block-uagb-container uagb-block-37e4ac1f alignfull uagb-is-root-container"><div class="uagb-container-inner-blocks-wrap">
-<div class="wp-block-uagb-advanced-heading uagb-block-25491194"><h2 class="uagb-heading-text">My Entrepreneurial Journey</h2></div>
+<div class="wp-block-uagb-advanced-heading uagb-block-25491194"><h2 class="uagb-heading-text">My Interests</h2></div>
 
 
 
-<div class="wp-block-uagb-advanced-heading uagb-block-6ca423a2"><p class="uagb-desc-text">I began programming in 8th grade with a simple motivation: to create cool games and apps like the ones I enjoyed on my mobile device. My curiosity about how these games and apps were created drove me to learn programming.</p></div>
-
-
-
-<div class="wp-block-uagb-advanced-heading uagb-block-e8dd1d0a"><p class="uagb-desc-text">I aspire to deepen my knowledge of Python and C++ in order to develop innovative software solutions that address people’s day-to-day challenges, ultimately making their lives easier.</p></div>
+<div class="wp-block-uagb-advanced-heading uagb-block-6ca423a2"><p class="uagb-desc-text">Hi my name is Mukund Thorat, I am 18 y/o and passionate about humans and especially brain</p></div>
 </div></div>
 
 
@@ -822,8 +818,6 @@ flexibility(document.documentElement);
 
 <div class="wp-block-uagb-container uagb-block-0458ec3f">
 <div class="wp-block-uagb-info-box uagb-block-0753227d uagb-infobox__content-wrap  uagb-infobox-icon-above-title uagb-infobox-image-valign-top"><div class="uagb-ifb-content">
-<div class="uagb-ifb-title-wrap"><p class="uagb-ifb-title">In addition to my hobby of programming, I have a passion for drawing. Before I delved into programming, I spent a lot of time honing my sketching skills. Drawing brings me immense joy, and I’ve participated in numerous competitions, winning prizes along the way.</p></div>
-<p class="uagb-ifb-desc">My aspiration is to contribute to solving global challenges, simplifying people’s lives through innovative services. I aim to pursue entrepreneurship as a career path, driven by a desire to make a meaningful impact on the world.</p>
 <div class="uagb-ifb-button-wrapper wp-block-button"><a href="https://mukundthorat08.github.io/Portfolio/about-me/" class="uagb-infobox-cta-link wp-block-button__link" target="_self" rel="noopener noreferrer" onclick="return true;" alt=""><span class="uagb-inline-editing">Read Full Story</span></a></div>
 </div></div>
 </div>
